Fix Flex Playground for dark mode - fixes #105

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -63,6 +63,9 @@ body.body--dark
   .api-row__example
     background-color: #004564
 
+  .row:not(.q-field__append) > div
+    background: transparent
+
 
 .text-brand-primary
   color: #b8b8b8
